# chat-rs

backend/: Cargo.toml  Dockerfile  build.rs
backend/migrations/: 20240308145801_CreateUsers.sql  20240312164856_CreateMessages.sql
backend/proto/: backend.proto  messaging.proto
backend/src/: db.rs  main.rs  websocket_message.rs
backend/src/grpc_handlers/: create_user.rs  get_user.rs
backend/src/proto_structs/: user.rs
backend/src/websocket_structs/: mod.rs
