[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
prost = "0.12.3"
derive_builder = "0.20.0"
tonic-reflection = "0.11.0"
uuid = { version = "1.7.0", features = ["v4"] }
sqlx = "0.7.3"
sqlx-postgres = "0.7.3"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"